--- a/example/index.html
+++ b/example/index.html
@@ -9,6 +9,7 @@
         padding-top: 70px;
       }
     </style>
+    <link rel="stylesheet" href="index.css" media="screen" charset="utf-8">
   </head>
   <body>
     <script src="build.js" type="text/javascript"></script>
