--- a/example/index.html
+++ b/example/index.html
@@ -12,6 +12,6 @@
     <link rel="stylesheet" href="index.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <script src="build.js" type="text/javascript"></script>
+    <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
