--- a/example/index.html
+++ b/example/index.html
@@ -10,8 +10,9 @@
       }
     </style>
     <link rel="stylesheet" href="index.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="anim.css">
   </head>
   <body>
-    <script src="index.js" type="text/javascript"></script>
+    <script src="build.js" type="text/javascript"></script>
   </body>
 </html>
