added a gif for the readme

--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Example</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://bootswatch.com/paper/bootstrap.min.css" charset="utf-8">
     <style media="screen">
       .page > .container {
